<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.ou.oudb.acp.MainActivity" >

    <item android:id="@+id/action_add"
          android:icon="@drawable/ic_action_new"
          android:title="@string/action_new"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_stats"
          android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/action_stats"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item android:id="@+id/action_experimentation"
        android:orderInCategory="0"
        android:showAsAction="never"
        android:title="@string/action_experimentation"/>

</menu>
